--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -12,7 +12,7 @@ volumes:
 
 services:
   giteadb:
-    image: postgres:9.6
+    image: postgres:9.6.17
     restart: always
     env_file:
       - giteadb.env
@@ -24,7 +24,7 @@ services:
       - ./postgres:/var/lib/postgresql/data
 
   nextclouddb:
-    image: mariadb
+    image: mariadb:10.4.12-bionic
     restart: always
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     env_file:
@@ -39,8 +39,7 @@ services:
       - mdb:/var/lib/mysql
 
   traefik:
-    #image: traefik:latest
-    image: traefik:v1.7
+    image: traefik:v1.7.22
     command: --docker
     ports:
       - 80:80
@@ -60,7 +59,7 @@ services:
     restart: always
 
   gitea:
-    image: gitea/gitea:latest
+    image: gitea/gitea:1.12.0
     environment:
       - USER_UID=1000
       - USER_GID=1000
