--- a/nextclouddb.env.template
+++ b/nextclouddb.env.template
@@ -1,4 +1,4 @@
-MYSQL_ROOT_PASSWORD=<ROOT_PASSWORD>
-MYSQL_PASSWORD=<PASSWORD>
-MYSQL_DATABASE=<DB_NAME>
-MYSQL_USER=<USER>
+MYSQL_ROOT_PASSWORD=<NEXTCLOUD_DB_ROOT_PASSWORD>
+MYSQL_DATABASE=<NEXTCLOUD_DB_DATABASE>
+MYSQL_USER=<NEXTCLOUD_DB_USER>
+MYSQL_PASSWORD=<NEXTCLOUD_DB_PASSWORD>
