--- a/Dockerfile_nextcloud/Dockerfile.template
+++ b/Dockerfile_nextcloud/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM nextcloud:18.0.0-apache
+FROM nextcloud:<NEXTCLOUD_TAG>
 
 RUN apt-get update && apt-get install -y procps smbclient libsmbclient-dev && rm -rf /var/lib/apt/lists/*
 RUN pecl install smbclient && docker-php-ext-enable smbclient;
