--- a/giteadb.env.template
+++ b/giteadb.env.template
@@ -1,3 +1,3 @@
-POSTGRES_USER=<USER>
-POSTGRES_PASSWORD=<PASSWORD>
-POSTGRES_DB=<DB_NAME>
+POSTGRES_USER=<GITEA_DB_USER>
+POSTGRES_PASSWORD=<GITEA_DB_PASSWORD>
+POSTGRES_DB=<GITEA_DB_NAME>
