Use explicit tags (#1)
* use explicit tags

* add docs

* update to docker compose

* update gitignore

* generate files from central values file with checks and diff-mode

* fix for complicated single-quoted secrets

* fix greedy regex

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 acme.json
-docker-compose.yml
 giteadb.env
 nextclouddb.env
+.env
 traefik.toml
 postgres/
 
@@ -16,3 +16,6 @@ gitea/gitea/*
 gitea/gitea/conf/*
 !gitea/gitea/conf/app.ini.template
 
+Dockerfile_nextcloud/Dockerfile
+
+**/*.diff
