--- a/traefik.yml.template
+++ b/traefik.yml.template
@@ -1,8 +1,6 @@
 global:
   checkNewVersion: true
 entryPoints:
-  dash:
-    address: :8080
   web:
     address: :80
     http:
@@ -20,7 +18,7 @@ providers:
     swarmModeRefreshSeconds: 15s
     exposedByDefault: false
 api:
-  insecure: true
+  insecure: false
   dashboard: true
 http:
   middlewares:
