fix auth-traefik typo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - "traefik.http.routers.traefik.rule=Host(`traefik.${DOMAIN}`)"
       - "traefik.http.routers.traefik.service=api@internal"
       - "traefik.http.routers.traefik.entrypoints=websecure"
-      - "traefik.http.routers.traefik.middlewares=authtraefik"
-      - "traefik.http.middlewares.traefik-basic-auth.authtraefik.basicauth.users=${TRAEFIK_USER}:${TRAEFIK_USER_TOKEN}"
+      - "traefik.http.routers.traefik.middlewares=auth-traefik"
+      - "traefik.http.middlewares.auth-traefik.basicauth.users=${TRAEFIK_USER}:${TRAEFIK_USER_TOKEN}"
 #      - "traefik.http.routers.api.service=api@internal"
 #      - "traefik.backend=dashboard"
 #      - "traefik.frontend.rule=Host:traefik.${DOMAIN}"
