use explicit cert-resolver instead of default

--- a/traefik.yml.template
+++ b/traefik.yml.template
@@ -24,7 +24,7 @@ api:
 log:
   level: INFO
 certificatesResolvers:
-  default:
+  le-resolver:
     acme:
       email: "<EMAIL>"
       storage: acme.json
