--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "traefik.http.routers.traefik.middlewares=auth-traefik"
       - "traefik.http.middlewares.auth-traefik.basicauth.users=${TRAEFIK_USER}:${TRAEFIK_USER_TOKEN}"
       - "traefik.http.routers.traefik.tls=true"
-      - "traefik.http.routers.traefik.certresolver=le-resolver"
+      - "traefik.http.routers.traefik.tls.certresolver=le-resolver"
 #      - "traefik.http.routers.api.service=api@internal"
 #      - "traefik.backend=dashboard"
 #      - "traefik.frontend.rule=Host:traefik.${DOMAIN}"
@@ -69,7 +69,7 @@ services:
       - "traefik.http.routers.gitea.rule=Host(`git.${DOMAIN}`)"
       - "traefik.http.routers.gitea.entrypoints=websecure"
       - "traefik.http.routers.gitea.tls=true"
-      - "traefik.http.routers.gitea.certresolver=le-resolver"
+      - "traefik.http.routers.gitea.tls.certresolver=le-resolver"
       - "traefik.http.routers.gitea.service=gitea-web-svc"
       - "traefik.http.services.gitea-web-svc.loadbalancer.server.port=3000"
       - "traefik.docker.network=publicnet"
@@ -109,7 +109,7 @@ services:
       - "traefik.http.routers.nextcloud.rule=Host(`cloud.${DOMAIN}`)"
       - "traefik.http.routers.nextcloud.entrypoints=websecure"
       - "traefik.http.routers.nextcloud.tls=true"
-      - "traefik.http.routers.nextcloud.certresolver=le-resolver"
+      - "traefik.http.routers.nextcloud.tls.certresolver=le-resolver"
       - "traefik.docker.network=publicnet"
 #      - "traefik.backend=nextcloud"
 #      - "traefik.frontend.rule=Host:cloud.${DOMAIN}"
