Feature update traefik (#2)
* move services around

* update traefik version, update all configs

* remove command, mount config-file to `/etc/traefik/`

* use websecure entrypoint for dashboard

* use versions directly

* try to fix dashboard based on [blogpost](https://traefik.io/blog/traefik-2-0-docker-101-fc2893944b9d/)

* test to fix middleware-problem via labels

* use traefik.enable instead of enabled

* fix auth-traefik typo

* use explicit cert-resolver instead of default

* fix tls typo

* cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ acme.json
 giteadb.env
 nextclouddb.env
 .env
-traefik.toml
+traefik.yml
 postgres/
 
 !gitea/
@@ -15,7 +15,5 @@ gitea/gitea/*
 
 gitea/gitea/conf/*
 !gitea/gitea/conf/app.ini.template
-
-Dockerfile_nextcloud/Dockerfile
 
 **/*.diff
