--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,32 @@ volumes:
   mdb:
 
 services:
+  traefik:
+    image: "traefik:v2.8.3"
+    restart: always
+    ports:
+      - 80:80
+      - 443:443
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=Host(`traefik.${DOMAIN}`)"
+      - "traefik.http.routers.traefik.service=api@internal"
+      - "traefik.http.routers.traefik.entrypoints=websecure"
+      - "traefik.http.routers.traefik.middlewares=auth-traefik"
+      - "traefik.http.middlewares.auth-traefik.basicauth.users=${TRAEFIK_USER}:${TRAEFIK_USER_TOKEN}"
+      - "traefik.http.routers.traefik.tls=true"
+      - "traefik.http.routers.traefik.tls.certresolver=le-resolver"
+    networks:
+      - publicnet
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./traefik.yml:/etc/traefik/traefik.yml
+      - ./acme.json:/acme.json
+    container_name: traefik
+
+
   giteadb:
-    image: "postgres:${GITEA_DB_TAG}"
+    image: "postgres:9.6.17"
     restart: always
     env_file:
       - giteadb.env
@@ -23,8 +47,37 @@ services:
     volumes:
       - ./postgres:/var/lib/postgresql/data
 
+  gitea:
+    image: "gitea/gitea:1.12.0"
+    environment:
+      - USER_UID=1000
+      - USER_GID=1000
+    restart: always
+    volumes:
+      - ./gitea:/data
+      - /opt/docker_compose/backup:/backup
+    ports:
+      - "3000"
+      - "22"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.gitea.rule=Host(`git.${DOMAIN}`)"
+      - "traefik.http.routers.gitea.entrypoints=websecure"
+      - "traefik.http.routers.gitea.tls=true"
+      - "traefik.http.routers.gitea.tls.certresolver=le-resolver"
+      - "traefik.http.routers.gitea.service=gitea-web-svc"
+      - "traefik.http.services.gitea-web-svc.loadbalancer.server.port=3000"
+      - "traefik.docker.network=publicnet"
+    networks:
+      - internal
+      - publicnet
+    depends_on:
+      - giteadb
+      - traefik
+
+
   nextclouddb:
-    image: "mariadb:${NEXTCLOUD_DB_TAG}"
+    image: "mariadb:10.4.12-bionic"
     restart: always
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     env_file:
@@ -38,62 +91,18 @@ services:
     volumes:
       - mdb:/var/lib/mysql
 
-  traefik:
-    image: "traefik:${TRAEFIK_TAG}"
-    command: --docker
-    ports:
-      - 80:80
-      - 443:443
-    labels:
-      - "traefik.enable=true"
-      - "traefik.backend=dashboard"
-      - "traefik.frontend.rule=Host:traefik.${DOMAIN}"
-      - "traefik.port=8080"
-    networks:
-      - publicnet
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./traefik.toml:/traefik.toml
-      - ./acme.json:/acme.json
-    container_name: traefik
-    restart: always
-
-  gitea:
-    image: "gitea/gitea:${GITEA_TAG}"
-    environment:
-      - USER_UID=1000
-      - USER_GID=1000
-    restart: always
-    volumes:
-      - ./gitea:/data
-      - /opt/docker_compose/backup:/backup
-    ports:
-      - "3000"
-      - "22"
-    labels:
-      - "traefik.enabled=true"
-      - "traefik.backend=gitea"
-      - "traefik.frontend.rule=Host:git.${DOMAIN}"
-      - "traefik.docker.network=publicnet"
-      - "traefik.port=3000"
-    networks:
-      - internal
-      - publicnet
-    depends_on:
-      - giteadb
-      - traefik
-
   nextcloud:
     build: Dockerfile_nextcloud
     restart: always
     ports:
       - 8080:80
     labels:
-      - "traefik.enabled=true"
-      - "traefik.backend=nextcloud"
-      - "traefik.frontend.rule=Host:cloud.${DOMAIN}"
+      - "traefik.enable=true"
+      - "traefik.http.routers.nextcloud.rule=Host(`cloud.${DOMAIN}`)"
+      - "traefik.http.routers.nextcloud.entrypoints=websecure"
+      - "traefik.http.routers.nextcloud.tls=true"
+      - "traefik.http.routers.nextcloud.tls.certresolver=le-resolver"
       - "traefik.docker.network=publicnet"
-      - "traefik.port=80"
     depends_on:
       - nextclouddb
       - traefik
