--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     image: "traefik:v2.8.3"
     restart: always
     ports:
-      - 80:80
-      - 443:443
+      - "80:80"
+      - "443:443"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.rule=Host(`traefik.${DOMAIN}`)"
@@ -75,6 +75,53 @@ services:
       - giteadb
       - traefik
 
+  new-giteadb:
+    image: "postgres:14.5"
+    restart: always
+    env_file:
+      - giteadb.env
+    labels:
+      - "traefik.enable=false"
+    networks:
+      - internal
+    volumes:
+      - ./new-postgres:/var/lib/postgresql/data
+
+  new-gitea:
+    image: "gitea/gitea:1.17.1"
+    environment:
+      - USER_UID=1000
+      - USER_GID=1000
+      - GITEA__database__DB_TYPE=postgres
+      - "GITEA__database__HOST=${GITEA_DB_HOST}:5432"
+      - "GITEA__database__NAME=${GITEA_DB_NAME}"
+      - "GITEA__database__USER=${GITEA_DB_USER}"
+      - "GITEA__database__PASSWD=${GITEA_DB_PASSWORD}"
+    restart: always
+    volumes:
+      - ./new-gitea:/data
+      - /opt/docker_compose/new-backup:/backup
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+    ports:
+      - "3000"
+      - "22"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.new-gitea.rule=Host(`new-git.${DOMAIN}`)"
+      - "traefik.http.routers.new-gitea.entrypoints=websecure"
+      - "traefik.http.routers.new-gitea.tls=true"
+      - "traefik.http.routers.new-gitea.tls.certresolver=le-resolver"
+      - "traefik.http.routers.new-gitea.service=new-gitea-web-svc"
+      - "traefik.http.services.new-gitea-web-svc.loadbalancer.server.port=3000"
+      - "traefik.docker.network=publicnet"
+    networks:
+      - internal
+      - publicnet
+    depends_on:
+      - new-giteadb
+      - traefik
+
 
   nextclouddb:
     image: "mariadb:10.4.12-bionic"
@@ -83,7 +130,7 @@ services:
     env_file:
       - nextclouddb.env
     ports:
-      - 3306:3306
+      - "3306:3306"
     labels:
       - "traefik.enable=false"
     networks:
@@ -95,7 +142,7 @@ services:
     build: Dockerfile_nextcloud
     restart: always
     ports:
-      - 8080:80
+      - "8080:80"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nextcloud.rule=Host(`cloud.${DOMAIN}`)"
