--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - "traefik.enable=false"
     networks:
       - internal
+      - publicnet
     volumes:
       - ./postgres:/var/lib/postgresql/data
 
