--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     image: "traefik:v2.8.3"
     restart: always
     ports:
-      - 80:80
-      - 443:443
+      - "80:80"
+      - "443:443"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.rule=Host(`traefik.${DOMAIN}`)"
@@ -36,10 +36,12 @@ services:
 
 
   giteadb:
-    image: "postgres:9.6.17"
+    image: "postgres:14.5"
     restart: always
     env_file:
       - giteadb.env
+    ports:
+      - "5432:5432"
     labels:
       - "traefik.enable=false"
     networks:
@@ -48,7 +50,7 @@ services:
       - ./postgres:/var/lib/postgresql/data
 
   gitea:
-    image: "gitea/gitea:1.12.0"
+    image: "gitea/gitea:1.17.1"
     environment:
       - USER_UID=1000
       - USER_GID=1000
@@ -56,6 +58,8 @@ services:
     volumes:
       - ./gitea:/data
       - /opt/docker_compose/backup:/backup
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     ports:
       - "3000"
       - "22"
@@ -83,7 +87,7 @@ services:
     env_file:
       - nextclouddb.env
     ports:
-      - 3306:3306
+      - "3306:3306"
     labels:
       - "traefik.enable=false"
     networks:
@@ -95,7 +99,7 @@ services:
     build: Dockerfile_nextcloud
     restart: always
     ports:
-      - 8080:80
+      - "8080:80"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nextcloud.rule=Host(`cloud.${DOMAIN}`)"
