--- a/gitea/gitea/conf/app.ini.template
+++ b/gitea/gitea/conf/app.ini.template
@@ -27,6 +27,7 @@ OFFLINE_MODE     = false
 [database]
 PATH     = /data/gitea/gitea.db
 DB_TYPE  = postgres
+SCHEMA   = public
 HOST     = <GITEA_DB_HOST>
 NAME     = <GITEA_DB_NAME>
 USER     = <GITEA_DB_USER>
