--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,11 @@ services:
     environment:
       - USER_UID=1000
       - USER_GID=1000
+      - GITEA__database__DB_TYPE=postgres
+      - "GITEA__database__HOST=${GITEA_DB_HOST}:5432"
+      - "GITEA__database__NAME=${GITEA_DB_NAME}"
+      - "GITEA__database__USER=${GITEA_DB_USER}"
+      - "GITEA__database__PASSWD=${GITEA_DB_PASSWORD}"
     restart: always
     volumes:
       - ./gitea:/data
